# sonicbit-python-sdk

./: .gitignore  README.md  format.sh  pre-commit.sh  pyproject.toml  requirements.txt  setup.py
.github/scripts/: ci_torrent_lifecycle.py
.github/workflows/: integration.yml  publish.yml
sonicbit/: __init__.py  base.py  client.py  constants.py  enums.py  errors.py  sonicbit.py  utils.py
sonicbit/error/: __init__.py  auth_error.py  error.py
sonicbit/handlers/: __init__.py  token_file.py  token_file_handler.py  token_handler.py
sonicbit/models/: __init__.py  app.py  auth_response.py  file.py  file_list.py  path_info.py  storage_details.py  user_details.py
sonicbit/models/remote_download/: __init__.py  remote_task.py  remote_task_list.py
sonicbit/models/torrent/: __init__.py  torrent.py  torrent_details.py  torrent_file.py  torrent_info.py  torrent_list.py
sonicbit/modules/: __init__.py  auth.py  base.py  file.py  remote_download.py  signup.py  torrent.py  user.py
sonicbit/types/: app.py  auth_response.py  file.py  file_list.py  path_info.py  storage_details.py  user_details.py
sonicbit/types/remote_download/: remote_task.py  remote_task_list.py
sonicbit/types/torrent/: torrent.py  torrent_details.py  torrent_file.py  torrent_info.py  torrent_list.py
