[project]
name = "sonicbit"
dynamic = ["version"]
description = "An unofficial Python SDK for SonicBit which uses the internal API to interact with the application."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
authors = [{ name = "Adnan Ahmad", email = "viperadnan@gmail.com" }]
keywords = ["sonicbit", "python", "sdk"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
 "httpx>=0.28.1",
 "pydantic>=2.0.0",
 "tenacity>=9.1.4",
]

[project.urls]
Homepage = "https://github.com/viperadnan-git/sonicbit-python-sdk"
Repository = "https://github.com/viperadnan-git/sonicbit-python-sdk"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"

[tool.hatch.build.hooks.vcs]
version-file = "sonicbit/_version.py"

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]

[tool.nizm.hooks]
ruff = { cmd = "ruff check --fix {staged_files} && ruff format {staged_files}", glob = "*.py" }

[tool.ruff.lint]
select = ["F", "I"]
fixable = ["F401", "I"]
